fixed navigation bug that refused to display nav properly on mobile devices

--- a/css/main.css
+++ b/css/main.css
@@ -12,6 +12,7 @@
 
 
 /* Nav bar and header styling which contains a linear gradient at a 45 degree angle */
+
 #landingBg {
     width: 100%;
 	height: 100vh;
@@ -31,7 +32,7 @@
     overflow: hidden !important;
 }
 
-@-webkit-keyframes Gradient {
+@keyframes Gradient {
 	0% {
 		background-position: 0% 50%
 	}
@@ -43,7 +44,7 @@
 	}
 }
 
-@-moz-keyframes Gradient {
+@keyframes Gradient {
 	0% {
 		background-position: 0% 50%
 	}
@@ -61,10 +62,6 @@
 	-webkit-animation: Gradient 20s ease infinite;
 	-moz-animation: Gradient 20s ease infinite;
 	animation: Gradient 40s ease infinite;
-}
-
-.navbar-menu{
-    display: flex !important;
 }
 
 .navbar-item:hover{
@@ -91,7 +88,7 @@ h2,h3 {
     color: #ffffff !important;
 }
 /* Bob */
-@-webkit-keyframes hvr-bob {
+/* @-webkit-keyframes hvr-bob {
     0% {
       -webkit-transform: translateY(-8px);
       transform: translateY(-8px);
@@ -153,7 +150,7 @@ h2,h3 {
     animation-fill-mode: forwards;
     -webkit-animation-direction: normal, alternate;
     animation-direction: normal, alternate;
-  }
+  } */
 
   .title {
       font-family: 'Raleway', sans-serif !important;
